tests/variable/collide_with_param.rev
fn foo(a: int) {
    var a // error: a variable with the same name as already been declared in this scope
}